cmake_minimum_required(VERSION 4.0)
project(8_practica_mapa_vector_Manuelr0107)

set(CMAKE_CXX_STANDARD 20)

add_executable(8_practica_mapa_vector_Manuelr0107 main.cpp
        src/Jugador.cpp
        src/Jugador.h
        src/Videojuego.cpp
        src/Videojuego.h
        src/Torneo.cpp
        src/Torneo.h)
